--- a/gasmet_data-conversion_2023.Rmd
+++ b/gasmet_data-conversion_2023.Rmd
@@ -1,12 +1,14 @@
 ---
-title: "gasmet_data-conversion_2022"
+title: "gasmet_data-conversion_2023"
 author: "jesse puka-beals"
 date: "`r Sys.Date()`"
-output: html_document
+output: 
+  html_document
+  # pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = F)
 library(tidyverse)
 ```
 
@@ -15,7 +17,7 @@ library(tidyverse)
 
 Gasmet measurements are recorded using calcmet software
 
-This software generates .SPE files that are autosaves into a folder named by date. For example folder 20221027 is for the most recent sampling on October 27th. Each time someone takes measurements on a new day, the data from the last sampling date is compressed. For example, there was once a folder called 20221021 but it was compressed into "SAMPLE20221021_1" on october 27th when new samples were recorded. 
+This software generates .SPE files that autosaves into a folder named by date. For example folder 20221027 is for the most recent sampling on October 27th. Each time someone takes measurements on a new day, the data from the last sampling date is compressed. For example, there was once a folder called 20221021 but it was compressed into "SAMPLE20221021_1" on october 27th when new samples were recorded. 
 
 Our objective is to get all of the data into a single data frame that has the date, the experiment, the field, the plot and the predicted gas concentrations (i.e. CO2 in ppm). 
 
@@ -41,11 +43,9 @@ There was only one cabinet file...
 
 # load SPE files into calcmet and generate outputs
 
-There were only 1922 files, one batch is fine
+There were only 1922 files for 2023 as of 21Apr2023, so we only need one batch. 
 
-# combine large output files into single file
-
-Need this fileEncoding arg to solve...
+Need this fileEncoding arg to use read.delim()...
 
 ```{r}
 
@@ -100,8 +100,8 @@ dat1 %>%
          .before=date) -> dat2
 ```
 
-```{r}
 
+```{r}
 dat2$filename[1]
 str_split(dat2$filename,
           pattern = "_",
@@ -114,11 +114,19 @@ str_split(dat2$filename,
                 calcmet_chronological_tally = V5) %>% 
   cbind(dat2) -> dat3
 
-dat3 %>% 
+# There are some measurements with an extra "R_". 
+# According to Angela, this was done automatically by calcmet
+
+# When I filter CO2 values must be greater than 100, all these "R_" value
+# disappear, suggesting this is just junk data, but it messes up the above code
+# so below I tidy up the column names to prep for export
+
+dat3 %>%
   filter(co2>100) %>%
-  # write.csv("gasmet_2023_ncas.csv")
+  dplyr::select(-V6) -> dat4
 
-
+# dat4 %>% 
+  # write.csv("gasmet_2023_ncas.csv",row.names=F)
 
 
 ```
@@ -128,56 +136,41 @@ dat3 %>%
 Time to enjoy the fruits of our labor
 
 ```{r}
-dat3 %>% 
-  filter(co2>375) %>% 
+dat4 %>% 
+  filter(co2>350) %>%
   # glimpse()
   ggplot(aes(co2)) +
   stat_bin(aes(y=after_stat(density))) +
   geom_density(aes(fill=date),
                alpha=.3,
                col=NA) +
-  theme_bw()
-
-# ggsave("co2_dist.png",
-#        width = 6,
-#        height = 6,
-#        units = "in",
-#        dpi=400)
-
+  theme_bw() +
+  geom_vline(
+    xintercept = 408
+  ) +
+  labs(
+    caption = "2017 atmospheric CO2 was ~408 parts per million"
+  )  
 ```
 
 ```{r}
-dat11 %>% 
-  ggplot(aes(n2o_ppm)) +
-  # stat_bin(aes(y=after_stat(density))) +
+dat4 %>% 
+  filter(co2>350) %>% 
+  mutate(
+    n2o_ppb = n2o*1000
+  ) %>% 
+  # glimpse()
+  ggplot(aes(n2o_ppb)) +
+  stat_bin(aes(y=after_stat(density))) +
   geom_density(aes(fill=date),
                alpha=.3,
                col=NA) +
-  theme_bw()
-
-dat11 %>% 
-  ggplot(aes(ch4_ppm)) +
-  # stat_bin(aes(y=after_stat(density))) +
-  geom_density(aes(fill=date),
-               alpha=.3,
-               col=NA) +
-  theme_bw()
-
-dat11 %>% 
-  ggplot(aes(nh3_ppm)) +
-  # stat_bin(aes(y=after_stat(density))) +
-  geom_density(aes(fill=date),
-               alpha=.3,
-               col=NA) +
-  theme_bw()
-
-dat11 %>% 
-  ggplot(aes(temp_celsius)) +
-  # stat_bin(aes(y=after_stat(density))) +
-  geom_density(aes(fill=date),
-               alpha=.3,
-               col=NA) +
-  theme_bw()
-
-
+  geom_vline(
+    xintercept = 330
+  ) +
+  theme_bw() +
+  labs(
+    caption = "2017 atmospheric N2o was ~330 parts per billion"
+  )
 ```
+
